WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
77952
REGRESSION(
r106819
): ~28% or so performance regression on the ManInBlue HTML benchmark
https://bugs.webkit.org/show_bug.cgi?id=77952
Summary
REGRESSION(r106819): ~28% or so performance regression on the ManInBlue HTML ...
Ryosuke Niwa
Reported
2012-02-07 02:07:39 PST
From
https://bugs.webkit.org/show_bug.cgi?id=77879
:
Comment #4
From Tim Horton 2012-02-06 13:32:31 PST (-) [reply] This change seems to significantly (~28% or so) regress performance of the ManInBlue HTML (
http://themaninblue.com/experiment/AnimationBenchmark/html/
) benchmark, among others. Looking at the change, though, I'm not sure how that's possible. Could you potentially take a look at this?
Attachments
Fix attempt
(1.88 KB, patch)
2012-02-07 02:13 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2012-02-07 02:13:12 PST
Created
attachment 125791
[details]
Fix attempt This is a fix attempt per analysis on the
bug 77879
. As much as I'd like to finish writing this patch, my brain isn't functioning anymore at 2am in the morning. I'll try to finish up the patch tomorrow if cmarcelo hadn't done so by the time I can get back to it.
Ryosuke Niwa
Comment 2
2012-02-07 02:31:27 PST
Okay, not adding a new test isn't as bad as I thought. DOM/Accessors caught this regression: It also caused a regression on DOM/Accessors:
http://webkit-perf.appspot.com/graph.html?#tests=[[3113,2001,32196]]&sel=1328551109987.2344,1328555918820.6528&displayrange=7&datatype=running
It seems like we imported Dromaeo tests just in time :D
Andreas Kling
Comment 3
2012-02-07 04:29:29 PST
(In reply to
comment #1
)
> Created an attachment (id=125791) [details] > Fix attempt > > This is a fix attempt per analysis on the
bug 77879
. As much as I'd like to finish writing this patch, my brain isn't functioning anymore at 2am in the morning. I'll try to finish up the patch tomorrow if cmarcelo hadn't done so by the time I can get back to it.
This patch looks fine to me, so I'm taking the liberty of saying r+ and landing it for you to get rid of the regression.
Andreas Kling
Comment 4
2012-02-07 04:29:39 PST
Committed
r106925
: <
http://trac.webkit.org/changeset/106925
>
Ryosuke Niwa
Comment 5
2012-02-07 08:31:09 PST
(In reply to
comment #3
)
> (In reply to
comment #1
) > > Created an attachment (id=125791) [details] [details] > > Fix attempt > > > > This is a fix attempt per analysis on the
bug 77879
. As much as I'd like to finish writing this patch, my brain isn't functioning anymore at 2am in the morning. I'll try to finish up the patch tomorrow if cmarcelo hadn't done so by the time I can get back to it. > > This patch looks fine to me, so I'm taking the liberty of saying r+ and landing it for you to get rid of the regression.
Thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug