REGRESSION(r106819): ~28% or so performance regression on the ManInBlue HTML benchmark <http://webkit.org/b/77952>

Reviewed by Andreas Kling.
Patch by Ryosuke Niwa.

The performance regression was caused by using ensureAttributeData() which forces the
regeneration of invalidated attributes ("style" and SVG animatable attributes.)
Added an ensureAttributeDataWithoutUpdate() helper that only ensures the presence
of ElementAttributeData, not the validity of its contents. Use that when grabbing
at an element's inline and attribute styles.

* dom/Element.h:
(Element):
(WebCore::Element::ensureAttributeDataWithoutUpdate):
* dom/StyledElement.h:
(WebCore::StyledElement::ensureInlineStyleDecl):
(WebCore::StyledElement::ensureAttributeStyle):


Canonical link: https://commits.webkit.org/94843@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106925 268f45cc-cd09-0410-ab3c-d52691b4dbfc